tests/baselines/reference/superWithTypeArgument2.errors.txt
tests/cases/compiler/superWithTypeArgument2.ts(7,14): error TS1034: 'super' must be followed by an argument list or member access.
tests/cases/compiler/superWithTypeArgument2.ts(7,9): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/compiler/superWithTypeArgument2.ts (2 errors) ====
    class C<T> {
        foo: T;
    }
    
    class D<T> extends C<T> {
        constructor(x) {
            super<T>(x);
                 ~
!!! error TS1034: 'super' must be followed by an argument list or member access.
            ~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
        }
    }